Fixed alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,15 @@
     display: none !important;
   }
 }
+
+.card-margin{
+    margin-bottom: 3px !important;
+}
+
+#invoice-preview{
+  font-family: 'sans-serif' !important;
+}
+
+#invoice-preview pre {
+  font-family: inherit; /* or your specific font, e.g., 'Inter', sans-serif */
+}
